--- a/LEARNING_EF_CODE_FIRST/LEARNING_EF_CODE_FIRST.csproj
+++ b/LEARNING_EF_CODE_FIRST/LEARNING_EF_CODE_FIRST.csproj
@@ -75,6 +75,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ConsoleApplication.rar" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
